# Warp2Api

./: .dockerignore  .env.bak  .env.example  ANONYMOUS_LIMITS_ANALYSIS.md  ANONYMOUS_TOKEN_ANALYSIS.md  CHANGES.md  Dockerfile  Dockerfile.rust  README.md  SCHEMAS_AND_MODELS.md  STATUS.md  TESTING.md  WARP.md  WARP_ANONYMOUS_AUTH_TECHNICAL_GUIDE.md  anonymous_limits_results.json  anonymous_usage_response.json  docker-compose.yml  kilo-code-settings.json  openai_compat.py  pyproject.toml  server.py  start.bat  start.py  start.sh  test_api_auth.sh  test_api_key.py  test_api_key.sh  test_api_key_final.sh  test_bearer_auth.sh  test_concurrent_connections.py  test_docker_fix.sh  test_embeddings.py  test_embeddings_simple.py  test_intercept_server.py  test_kilocode_integration.py  test_openai_integration.py  test_openai_quick.py  test_performance.py  test_proxy.py  test_proxy_fix.py
protobuf2openai/: app.py  bridge.py  http_client.py  models.py  packets.py  proxy_utils.py  router.py  sse_transform.py
warp2protobuf/api/: protobuf_routes.py
warp2protobuf/config/: settings.py
warp2protobuf/core/: api_key_validation.py  auth.py  protobuf_utils.py  session.py  stream_processor.py
warp2protobuf/warp/: api_client.py  api_client.py.backup  api_client_requests.py
